--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "installCommand": "pnpm install --no-frozen-lockfile",
   "buildCommand": "pnpm build",
+  "outputDirectory": "dist",
   "functions": {
     "api/index.js": {
       "runtime": "nodejs20.x"
