--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "pnpm install --no-frozen-lockfile",
-  "buildCommand": "pnpm build",
+  "buildCommand": "node build.js",
   "outputDirectory": "dist",
   "routes": [
     { "src": "/(.*)", "dest": "/api/index.js" }
